--- a/Ejercicio 3.2/3.2.html
+++ b/Ejercicio 3.2/3.2.html
@@ -43,7 +43,7 @@
                 <td>Curabitur <em>blandit</em></td>
             </tr>
             <tr>
-                <th scope="row">Título fila 2</th>
+                <th id="rojo" scope="row">Título fila 2</th>
                 <td>Donec <strong class="strong2">purus ipsum</strong></td>
                 <td>Curabitur blandit</td>
             </tr>
