--- a/Ejercicio 3.4/3.4parte2.html
+++ b/Ejercicio 3.4/3.4parte2.html
@@ -9,7 +9,10 @@
 </head>
 
 <body>
-  <h1>HORARIO DE CLASE CURSO 2018-2019</h1>
+  <a href="https://openwebinars.net/">
+    <h1>HORARIO DE CLASE CURSO 2018-2019</h1>
+  </a>
+
   <table>
     <thead>
       <tr>
@@ -38,9 +41,7 @@
       </tr>
       <tr>
         <td class="horas">10:00</td>
-        <strong>
-          <td colspan="5" class="recreo">RECREO</td>
-        </strong>
+        <td colspan="5" class="recreo">RECREO</td>
       </tr>
       <tr>
         <td class="horas">10:30</td>
@@ -59,6 +60,7 @@
       </tr>
     </tbody>
   </table>
+
   <br>
   <form>
     <label for="email">Email</label>
