--- a/3.6/3.6.html
+++ b/3.6/3.6.html
@@ -13,9 +13,9 @@
     <h1>HTML &amp; CSS: Curso práctico avanzado</h1>
 
     <div class="container">
-        <div class="column-1">
+        <div class="columna1">
             <h2>Datos del libro</h2>
-            <ul>
+            <ul class="lista1">
                 <li>Título: HTML &amp; CSS: Curso práctico avanzado</li>
                 <li>Autor: Sergio Luján Mora</li>
                 <li>Editorial: Publicaciones Altaria</li>
@@ -24,7 +24,7 @@
             </ul>
         </div>
 
-        <div class="column-2">
+        <div class="columna2">
             <h2>Descripción del libro</h2>
             <p>
                 Aunque los inicios de Internet se remontan a los años sesenta, no ha sido
@@ -49,7 +49,7 @@
 
             <h2>Contenido del libro</h2>
             <p>El contenido de este libro se estructura en tres apartados bien diferenciados:</p>
-            <ul class="columns">
+            <ul class="columna3 lista2">
                 <li>En la primera parte del libro se trabajan conceptos generales que son
                     necesarios para poder desarrollar páginas web; se explican conceptos de
                     estructura física y estructura lógica (o estructura de navegación) de un sitio web.
