--- a/AbejasyZánganosFinal/5.html
+++ b/AbejasyZánganosFinal/5.html
@@ -66,14 +66,14 @@
             </div>
             <div class="social-media">
                 <h1>Redes Sociales</h1>
-                <a href="#" target="_blank">
-                    <img src="https://i.pinimg.com/736x/2b/a7/17/2ba717ac010d3b9f8d26e9db4da291b8.jpg" alt="X">
+                <a href="https://x.com/?lang=es" target="_blank">
+                    <img src="X.png" alt="X">
                 </a>
-                <a href="#" target="_blank">
-                    <img src="https://e7.pngegg.com/pngimages/672/312/png-clipart-instagram-logo-icon-others-text-photography.png" alt="Instagram">
+                <a href="https://www.instagram.com/" target="_blank">
+                    <img src="insta.png" alt="Instagram">
                 </a>
-                <a href="#" target="_blank">
-                    <img src="https://e7.pngegg.com/pngimages/213/828/png-clipart-facebook-logo-facebook-messenger-logo-social-media-icon-facebook-icon-blue-text-thumbnail.png" alt="Facebook">
+                <a href="https://www.facebook.com/login/?next=https%3A%2F%2Fwww.facebook.com%2F%3Flocale%3Des_ES" target="_blank">
+                    <img src="face.png" alt="Facebook">
                 </a>
             </div>
         </div>
