--- a/AbejasyZánganosFinal/5.html
+++ b/AbejasyZánganosFinal/5.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abejas y Zánganos - Registro</title>
     <link rel="stylesheet" href="5.css">
 </head>
+
 <body>
 
     <header>
         <div class="header-content">
             <img src="Logo abejas.png" alt="Logo" class="logo">
-            <h1>ABEJAS Y ZÁNGANOS</h1>
+            <h1><a href="1.html" style="text-decoration: none; color: inherit;">ABEJAS Y ZÁNGANOS</a></h1>
             <img src="Logo abejas.png" alt="Logo" class="logo">
         </div>
         <nav>
@@ -24,35 +26,38 @@
 
     <section class="registro">
         <h2>REGISTRO</h2>
-        <p>Bienvenido a "Abejas y Zánganos", donde podrás descubrir los mejores productos naturales provenientes de nuestras colmenas. Regístrate ahora para disfrutar de los siguientes beneficios:</p>
+        <p>Bienvenido a "Abejas y Zánganos", donde podrás descubrir los mejores productos naturales provenientes de
+            nuestras colmenas. Regístrate ahora para disfrutar de los siguientes beneficios:</p>
         <ul>
             <li>Acceso exclusivo a promociones y descuentos.</li>
             <li>Recibe nuestras novedades sobre apicultura directamente en tu correo.</li>
             <li>Participa en sorteos y concursos exclusivos para miembros registrados.</li>
         </ul>
-        <p>Completa el formulario de registro para unirte a nuestra comunidad y comenzar a disfrutar de todo lo que tenemos para ofrecerte. ¡Nos encantaría que formases parte de nuestra familia de apicultores!</p>
-        
+        <p>Completa el formulario de registro para unirte a nuestra comunidad y comenzar a disfrutar de todo lo que
+            tenemos para ofrecerte. ¡Nos encantaría que formases parte de nuestra familia de apicultores!</p>
+
         <form class="registro-form">
             <label for="nombre">NOMBRE:</label>
-            <input type="text" id="nombre" name="nombre" required>
+            <input type="text" id="nombre" name="nombre" placeholder="Escribe tu nombre" required>
 
             <label for="apellidos">APELLIDOS:</label>
-            <input type="text" id="apellidos" name="apellidos" required>
+            <input type="text" id="apellidos" name="apellidos" placeholder="Escribe tus apellidos" required>
 
             <label for="email">EMAIL:</label>
-            <input type="email" id="email" name="email" required>
+            <input type="email" id="email" name="email" placeholder="Escribe tu correo electrónico" required>
 
             <label for="ciudad">CIUDAD:</label>
-            <input type="text" id="ciudad" name="ciudad" required>
+            <input type="text" id="ciudad" name="ciudad" placeholder="Escribe tu ciudad" required>
 
             <label for="cp">C.P.:</label>
-            <input type="text" id="cp" name="cp" required>
+            <input type="text" id="cp" name="cp" placeholder="Código postal" required>
 
             <label for="direccion">DIRECCIÓN:</label>
-            <input type="text" id="direccion" name="direccion" required>
+            <input type="text" id="direccion" name="direccion" placeholder="Escribe tu dirección" required>
 
             <button type="submit">REGISTRARSE</button>
         </form>
+
     </section>
 
     <footer>
@@ -60,7 +65,8 @@
             <div class="contact-info">
                 <h1>Contacto</h1>
                 <p><span>📍</span> Sierra de Gata, España</p>
-                <p><span>✉️</span> <a href="mailto:info@apicultoresgatasierradegata.com">info@apicultoresgatasierradegata.com</a></p>
+                <p><span>✉️</span> <a
+                        href="mailto:info@apicultoresgatasierradegata.com">info@apicultoresgatasierradegata.com</a></p>
                 <p><span>📞</span> +34 123 456 789</p>
                 <p>© 2024 Asociación de Apicultores de la Sierra de Gata. Todos los derechos reservados.</p>
             </div>
@@ -72,7 +78,8 @@
                 <a href="https://www.instagram.com/" target="_blank">
                     <img src="insta.png" alt="Instagram">
                 </a>
-                <a href="https://www.facebook.com/login/?next=https%3A%2F%2Fwww.facebook.com%2F%3Flocale%3Des_ES" target="_blank">
+                <a href="https://www.facebook.com/login/?next=https%3A%2F%2Fwww.facebook.com%2F%3Flocale%3Des_ES"
+                    target="_blank">
                     <img src="face.png" alt="Facebook">
                 </a>
             </div>
@@ -80,4 +87,5 @@
     </footer>
 
 </body>
+
 </html>
